--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -1,12 +1,41 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>КЕКС | Виджеты</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>{{ title }}</title>
+    <link rel="stylesheet" href="{% static 'frontend/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'frontend/css/style.css' %}">
 </head>
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-    HELLO
+<body data-bs-theme="dark">
+    <script src="{% static 'frontend/js/bootstrap.min.js' %}"></script>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container container-fluid">
+            <a class="navbar-brand" href="#">Кекс</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Виджеты</a>
+                    </li>
+                </ul>
+                {% if not user.is_authorized %}
+                <a href="/login" class="nav-item nav-link">Войти</a>
+                {% endif %}
+                {% if user.is_authorized %}
+                <a href="/logout" class="nav-item nav-link">Выйти</a>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+
+    {% block main_menu %}
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
 </body>
 </html>
