--- a/frontend/templates/frontend/register.html
+++ b/frontend/templates/frontend/register.html
@@ -5,6 +5,11 @@
     <div class="row text-center justify-content-center">
         <div class="col-sm-12 col-md-8 col-lg-4" style="max-width:400px;">
             <h1 class="h3 mt-5 mb-3">Регистрация</h1>
+            {% for massage in error_massages %}
+            <div class="alert alert-danger" role="alert">
+                {{ massage }}
+            </div>
+            {% endfor %}
             <form action="" method="POST">
                 {% csrf_token %}
                 <div class="input-group mt-2">
