--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -18,14 +18,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Виджеты</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'widgets' %}">Виджеты</a>
                     </li>
                 </ul>
-                {% if not user.is_authorized %}
-                <a href="/login" class="nav-item nav-link">Войти</a>
+                {% if not user.is_authenticated %}
+                    <a href="{% url 'login' %}" class="nav-item nav-link">Войти</a>
                 {% endif %}
-                {% if user.is_authorized %}
-                <a href="/logout" class="nav-item nav-link">Выйти</a>
+                {% if user.is_authenticated %}
+                    <div class="nav-item me-2">
+                        <span class="nav-item">Привет, {{ request.user }}</span>
+                    </div>
+                    <div class="nav-item">
+                        <a href="{% url 'logout' %}" class="nav-item nav-link active">Выйти</a>
+                    </div>
                 {% endif %}
             </div>
         </div>
