--- a/frontend/templates/frontend/widgets.html
+++ b/frontend/templates/frontend/widgets.html
@@ -1,5 +1,34 @@
 {% extends 'frontend/base.html' %}
 
 {% block content %}
+<div class="container">
+    <div class="row border border-3 rounded-3 mt-2">
+        <h1 class="h3 mt-2 mb-3">Добавление виджетов</h1>
+        <div class="col col-sm-12 col-md-6">
+            <form action="" method="post">
+                {% csrf_token %}
+                <div class="input-group mb-3">
+                    <label class="input-group-text" for="widget-name" id="widget-name-label">Имя виджета</label>
+                    <input type="text" class="form-control" id="widget-name" aria-describedby="widget-name-label">
+                </div>
+                <div class="input-group mb-3">
+                    <input type="submit" class="btn btn-outline-secondary" value="Добавить">
+                </div>
+            </form>
+        </div>
+        <div class="col col-sm-12 col-md-6">
 
+        </div>
+    </div>
+    <div class="row">
+        {% for widget in widgets_list %}
+        <div class="col-sm12 col-md-6 col-lg-6">
+            {{ widget }}
+        </div>
+        <div class="col-sm12 col-md-6 col-lg-6">
+
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
