--- a/frontend/templates/frontend/widget.html
+++ b/frontend/templates/frontend/widget.html
@@ -4,6 +4,17 @@
     <div class="container">
         <div class="col">
             <h1 class="h3 text-center mt-3 mx-auto">{{ widget.title }}</h1>
+            <div class="row mx-auto">
+                <div class="input-group mx-auto">
+                    <button class="btn btn-outline-secondary">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
+                          <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
+                          <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
+                        </svg>
+                    </button>
+                    <input type="text" class="input-group-text" value="{% url 'widget_detail_obs' widget_uuid=widget.uuid %}">
+                </div>
+            </div>
             {% for counter in widget.counters.all %}
                 <div class="row" data-counter-id="{{ counter.id }}" data-url="{% url 'counter-detail' pk=counter.id %}">
                     <div class="input-group mt-2 mb-2 mx-auto" style="max-width: 500px">
@@ -46,22 +57,22 @@
                 case 'increase-value':
                     counterInput.value = +counterInput.value + +change.value;
                     apiUrl += 'increase/'
-                    postData['increase-value'] = change.value;
+                    postData['increase_value'] = change.value;
                     break;
                 case 'decrease-value':
                     counterInput.value = +counterInput.value - +change.value;
                     apiUrl += 'decrease/'
-                    postData['decrease-value'] = change.value;
+                    postData['decrease_value'] = change.value;
                     break;
                 case 'increase-default-value':
                     counterInput.value = +counterInput.value + +defaultIncrement;
                     apiUrl += 'increase/'
-                    postData['increase-value'] = defaultIncrement;
+                    postData['increase_value'] = defaultIncrement;
                     break;
                 case 'decrease-default-value':
                     counterInput.value = +counterInput.value - +defaultIncrement;
                     apiUrl += 'decrease/'
-                    postData['decrease-value'] = defaultIncrement;
+                    postData['decrease_value'] = defaultIncrement;
                     break;
             }
 
