--- a/frontend/templates/frontend/widget.html
+++ b/frontend/templates/frontend/widget.html
@@ -6,13 +6,14 @@
             <h1 class="h3 text-center mt-3 mx-auto">{{ widget.title }}</h1>
             <div class="row mx-auto">
                 <div class="input-group mx-auto">
-                    <button class="btn btn-outline-secondary">
+                    <label for="textToCopy" class="visually-hidden">Ссылка для встраивания</label>
+                    <input id="textToCopy" type="text" class="input-group-text" value="{{ url }}" readonly>
+                    <button id="copyButton" class="input-group-btn btn btn-outline-secondary">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
                           <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
                           <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
                         </svg>
                     </button>
-                    <input type="text" class="input-group-text" value="{% url 'widget_detail_obs' widget_uuid=widget.uuid %}">
                 </div>
             </div>
             {% for counter in widget.counters.all %}
@@ -32,6 +33,21 @@
         </div>
     </div>
     <script>
+
+    // Получаем элемент кнопки и текстовое поле для копирования
+    const copyButton = document.getElementById('copyButton');
+    const textToCopy = document.getElementById('textToCopy');
+
+    copyButton.addEventListener('click', async function() {
+        try {
+            await navigator.clipboard.writeText(textToCopy.value);
+            // Опционально: показываем сообщение о том, что текст скопирован
+            alert('Текст скопирован: ' + textToCopy.value);
+        } catch (err) {
+            console.error('Ошибка при попытке копирования', err);
+        }
+    });
+
     document.addEventListener('DOMContentLoaded', (event) => {
         const changeValueButtons = document.querySelectorAll('.change-value');
 
