--- a/frontend/templates/frontend/obs.html
+++ b/frontend/templates/frontend/obs.html
@@ -5,13 +5,25 @@
     <meta charset="UTF-8">
     <title>obs</title>
     <link rel="stylesheet" href="{% static 'frontend/css/bootstrap.min.css' %}">
+    <style>
+        body {
+            background: rgba(0, 0, 0, 0);
+            padding-left: 50px;
+        }
+
+        span {
+            color: black;
+            font-size: 150px;
+            text-shadow: rgba(255,255,255,0.8) 0 0 40px;
+        }
+    </style>
 </head>
 <body>
     {% for counter in counters %}
         <div class="row">
             <div class="col">
-                <span class="fs-2 d-inline">{{ counter.label }}:</span>
-                <span class="fs-2 d-inline" data-counter-id="{{ counter.id }}">{{ counter.value }}</span>
+                <span class="counter-label d-inline">{{ counter.label }}:</span>
+                <span class="counter-value d-inline" data-counter-id="{{ counter.id }}">{{ counter.value }}</span>
             </div>
         </div>
     {% endfor %}
