--- a/frontend/templates/frontend/widget.html
+++ b/frontend/templates/frontend/widget.html
@@ -2,12 +2,15 @@
 
 {% block content %}
     <div class="container">
-        <div class="col">
+        <div class="col mx-auto" style="max-width: 500px">
+            <div id="notification" class="alert alert-success d-none position-fixed top-0 start-50 translate-middle-x" role="alert" style="z-index: 1030; margin-top: 1rem;">
+                Ссылка скопирована!
+            </div>
             <h1 class="h3 text-center mt-3 mx-auto">{{ widget.title }}</h1>
             <div class="row mx-auto">
                 <div class="input-group mx-auto">
+                    <input id="textToCopy" type="text" class="form-control" value="{{ url }}" readonly>
                     <label for="textToCopy" class="visually-hidden">Ссылка для встраивания</label>
-                    <input id="textToCopy" type="text" class="input-group-text" value="{{ url }}" readonly>
                     <button id="copyButton" class="input-group-btn btn btn-outline-secondary">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
                           <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
@@ -42,7 +45,12 @@
         try {
             await navigator.clipboard.writeText(textToCopy.value);
             // Опционально: показываем сообщение о том, что текст скопирован
-            alert('Текст скопирован: ' + textToCopy.value);
+            let notificationDiv = document.getElementById('notification');
+            notificationDiv.classList.remove('d-none');
+
+            setTimeout(function () {
+              notificationDiv.classList.add('d-none');
+            }, 3000);
         } catch (err) {
             console.error('Ошибка при попытке копирования', err);
         }
