--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -6,6 +6,7 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{% static 'frontend/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'frontend/css/style.css' %}">
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
 </head>
 <body data-bs-theme="dark">
     <script src="{% static 'frontend/js/bootstrap.min.js' %}"></script>
